src/objects/Cricket_Application_Issue__c.object
<CustomObject>
    <description>Cricket Application Issues</description>
    <fields>
        <fullName>Cricket_Teams_Owner__c</fullName>
        <description>Cricket Team&apos;s Owner</description>
        <inlineHelpText>Cricket Team&apos;s Owner</inlineHelpText>
        <label>Cricket Team&apos;s Owner</label>
        <referenceTo>Cricket_Team__c</referenceTo>
        <relationshipLabel>Cricket Application Issues</relationshipLabel>
        <relationshipName>Cricket_Application_Issues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Issue_Description__c</fullName>
        <description>Issue Description</description>
        <inlineHelpText>Issue Description</inlineHelpText>
        <label>Issue Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Issue_End_Date__c</fullName>
        <description>Issue End Date</description>
        <inlineHelpText>Issue End Date</inlineHelpText>
        <label>Issue End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Issue_Related_To__c</fullName>
        <description>Issue Related To</description>
        <inlineHelpText>Issue Related To</inlineHelpText>
        <label>Issue Related To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Access Issues</fullName>
                </value>
                <value>
                    <fullName>Email and SMS Notification Issues</fullName>
                </value>
                <value>
                    <fullName>User Interface Issues</fullName>
                </value>
                <value>
                    <fullName>Points Calculation Issues</fullName>
                </value>
                <value>
                    <fullName>Other Issues</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_Start_Date__c</fullName>
        <description>Issue Start Date</description>
        <inlineHelpText>Issue Start Date</inlineHelpText>
        <label>Issue Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Issue_Status__c</fullName>
        <description>Issue Status</description>
        <inlineHelpText>Issue Status</inlineHelpText>
        <label>Issue Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Discarded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Cricket Application Issue</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CI-{0000}</displayFormat>
        <label>Cricket Issue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cricket Application Issues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>